fixed card height on mobile

--- a/src/styles/center-styles.scss
+++ b/src/styles/center-styles.scss
@@ -82,6 +82,6 @@
 @media only screen and (max-width: 410px) {
   .card {
     grid-template-columns: 320px;
-    grid-template-rows: 450px 100px;
+    grid-template-rows: 490px 90px;
   }
 }
